# Auto-Pay-Protocol

./: .gitignore  .mcp.json  README.md  meeting-background.html
.github/workflows/: ci.yml
anchor/: Anchor.toml  package.json
anchor/programs/autopay/: Cargo.toml
anchor/programs/autopay/src/: lib.rs
anchor/tests/: autopay.ts
branding/: autopay-logo.ai  autopay-poster.ai  ~ai-14749caa-caa7-42fd-a051-27c85ffc83c5_.tmp  ~ai-2682daab-6967-4561-b3be-2683617bdcf8_.tmp
branding/autopay-poster/: autopay-poster.ai
contracts/: .env.example  ENV.md  Makefile  README.md  chains.json
contracts/cache/: solidity-files-cache.json
contracts/script/: Deploy.s.sol  DeployArc.s.sol  DeployTestUSDC.s.sol
contracts/scripts/: deploy-all.sh  deploy-arc.sh  deploy.sh  generate-agent-sdk-chains.js  sync.sh  (+10 more)
documentation/: AGENT_ARCHITECTURE.md  agent-sdk-quickstart.md  agent-sdk-reference.md  discord-subscription-gating.md  mcp-reference.md  merchant-checkout-example.md  merchant-guide.md  middleware-reference.md  overview.md  privacy-guide.md  protocol-labs-demo-script.md  relayer-configuration.md  relayer-deployment.md  relayer-local-setup.md  relayer-operations.md  sdk-backend.md  sdk-frontend.md  subscriber-guide.md
frontend/: .gitignore  .vade-report  ENV.md  index.html  middleware.ts  package-lock.json  package.json  vercel.json  vite-env.d.ts  vite.config.ts
relayer/: .env.example  ENV.md  README.md  package-lock.json  package.json
shared/: geoblock.ts
slides/: PITCH-1MIN.md  index.html
webhook-receiver/: README.md  package.json  register-merchant.js
(+285 files in other folders)
