[package]
name = "autopay"
version = "0.1.0"
description = "AutoPay Protocol - Non-custodial recurring USDC subscription policies on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "autopay"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
